kubernetes/fsm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: fsm
  name: fsm
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: fsm
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/docker_network: "true"
        io.kompose.service: fsm
    spec:
      containers:
      - args:
        - ./wait-for-it.sh
        - rabbitmq:5672
        - --
        - python
        - ./views.py
        image: diarmuidk/wacc:fsm
        imagePullPolicy: Always
        name: fsm
#        volumeMounts:
#          # name should match from volumes section
#          - name: logs-volume-1
#            mountPath: "/logs"
        ports:
        - containerPort: 4500
        resources: {}
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
      serviceAccountName: ""

#      volumes:
#        - name: logs-volume-1
#          persistentVolumeClaim:
#            claimName: nfs-logs-pvc
status: {}
