kubernetes/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    wacc-app: auth
  name: auth
spec:
  ports:
  - name: http
    port: 4000
    targetPort: 4000
  selector:
    wacc-app: auth
status:
  loadBalancer: {}
