kubernetes/file-uploader-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: file-uploader
  name: file-uploader
spec:
  ports:
  - name: "3500"
    port: 3500
    targetPort: 3500
  selector:
    io.kompose.service: file-uploader
status:
  loadBalancer: {}
