kubernetes/front-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: front-end
  name: front-end
spec:
  ports:
  - name: "3000"
    port: 80
    targetPort: 80
  selector:
    io.kompose.service: front-end
status:
  loadBalancer: {}
