kubernetes/fsm-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: fsm
  name: fsm
spec:
  ports:
  - name: "4500"
    port: 4500
    targetPort: 4500
  selector:
    io.kompose.service: fsm
status:
  loadBalancer: {}
