kubernetes/portainer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: portainer
  name: portainer
spec:
  ports:
  - name: "portainer"
    port: 9000
    targetPort: 9000
  selector:
    io.kompose.service: portainer
status:
  loadBalancer: {}
