kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\kompose\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  ports:
  - name: "6379"
    port: 6379
    targetPort: 6379
  selector:
    io.kompose.service: redis
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\kompose\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: sentinel-1
  name: sentinel-1
spec:
  ports:
  - name: "26379"
    port: 26379
    targetPort: 26379
  selector:
    io.kompose.service: sentinel-1
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\kompose\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: sentinel-2
  name: sentinel-2
spec:
  ports:
  - name: "26379"
    port: 26379
    targetPort: 26379
  selector:
    io.kompose.service: sentinel-2
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\kompose\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: sentinel-3
  name: sentinel-3
spec:
  ports:
  - name: "26379"
    port: 26379
    targetPort: 26379
  selector:
    io.kompose.service: sentinel-3
status:
  loadBalancer: {}
