kubernetes/nginx-ingress-nopath.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-wacc-nopath
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: $1

spec:
  rules:
    - http:
        paths:
        - path: /rabbitmq(.*)
          backend:
            serviceName: rabbitmq
            servicePort: 15672
        - path: /kibana(.*)
          backend:
            serviceName: kibana
            servicePort: 5601
        - path: /portainer(.*)
          backend:
            serviceName: portainer
            servicePort: 9000
